2008-02-27  Nick Clifton  <nickc@redhat.com>

	PR 3134
	* gas/h8300/pr3134.s: New test.
	* gas/h8300/pr3134.d: Expected disassembly
	* gas/h8300/h8300.exp: Run the new test.

	* gas/h8300/h8300-coff.exp: Fix test for COFF based ports to
	accept h8300-rtemscoff not just h8300-rtems.

2008-02-26  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/jump.d: Updated for COFF.

2008-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/jump.s: Add tests for far branches.
	* gas/i386/jump16.s: Likewise.

	* gas/i386/jump.d: Updated.
	* gas/i386/jump16.d: Likewise.
	* gas/i386/x86-64-inval.l: Likewise.

	* gas/i386/x86-64-inval.s: Add tests for 16-bit near indirect
	branches.

2008-02-22  Nick Clifton  <nickc@redhat.com>

	* gas/m68hc11/bug-1825.d: Update to match changes in the
	information generated with source-in-disassembly listings.
	* gas/m68hc11/indexed12.d: Likewise.
	* gas/m68hc11/insns-dwarf2.d: Likewise.
	* gas/m68hc11/lbranch-dwarf2.d: Likewise.

2008-02-18  H.J. Lu  <hongjiu.lu@intel.com>

	* cfi/cfi.exp (gas_x86_64_check): New.
	(gas_x86_32_check): Likewise.
	Run 32bit and 64bit tests for x86 targets if they are supportd.

2008-02-18  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/att-regs.s, gas/i386/att-regs.d,
	gas/i386/intel-regs.s, gas/i386/intel-regs.d: New.
	* gas/i386/i386.exp: Run new tests.

2008-02-14  Nick Clifton  <nickc@redhat.com>

	PR gas/5712
	* gas/arm/fp-save.s: New test.
	* gas/arm/fp-save.d: Expected disassembly.

2008-02-13  Adam Nemet  <anemet@caviumnetworks.com>

	* gas/mips/branch-misc-2pic-64.d (#name): Have a unique name
	different from the branch-misc-2-64.d test.

2008-02-13  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intelok.s: Replace invalid offset expression with
	valid ones.
	* gas/i386/x86_64.s: Likewise.

2008-02-13  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intelbad.s, gas/i386/intelok.s: Add 'bound' tests.
	* gas/i386/intelbad.l, gas/i386/intelok.l, gas/i386/intelok.e,
	gas/i386/opcode-intel.d: Adjust.
